scrollbar fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,14 +59,7 @@ html {
 
 	}
 	.video-container {
-		position: absolute;
-		top:0;
-		bottom: 0;
-
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-		z-index: -1000;
+	
 	}
 
 	#video-background {
